made melter functional with recipes

--- a/src/main/resources/assets/melting/lang/en_us.json
+++ b/src/main/resources/assets/melting/lang/en_us.json
@@ -1,4 +1,5 @@
 {
 	"container.melter": "Melter",
-	"gui.recipebook.toggleRecipes.meltable": "Showing Meltable"
+	"gui.recipebook.toggleRecipes.meltable": "Showing Meltable",
+	"block.melting.melter": "Melter"
 }
