melter interactions stat in alphabetical order

--- a/src/main/resources/assets/melting/lang/en_us.json
+++ b/src/main/resources/assets/melting/lang/en_us.json
@@ -1,5 +1,6 @@
 {
 	"container.melter": "Melter",
 	"gui.recipebook.toggleRecipes.meltable": "Showing Meltable",
-	"block.melting.melter": "Melter"
+	"block.melting.melter": "Melter",
+	"stat.melting.interact_with_melter": "Interactions with Melter"
 }
