--- a/src/main/resources/assets/melting/lang/en_us.json
+++ b/src/main/resources/assets/melting/lang/en_us.json
@@ -2,5 +2,6 @@
 	"container.melter": "Melter",
 	"gui.recipebook.toggleRecipes.meltable": "Showing Meltable",
 	"block.melting.melter": "Melter",
-	"stat.melting.interact_with_melter": "Interactions with Melter"
+	"stat.melting.interact_with_melter": "Interactions with Melter",
+	"item.melting.melter_minecart": "Minecart with Melter"
 }
